--- a/frontend/src/styles/TopicList.scss
+++ b/frontend/src/styles/TopicList.scss
@@ -1,10 +1,11 @@
 .top-nav-bar__topic-list {
   display: flex;
-  justify-content: center; 
+  justify-content: space-evenly; 
   align-items: center; 
-  flex-wrap: wrap; 
+  flex-wrap: nowrap; 
   padding: 10px 0; 
   gap: 15px; 
+  width: 100%; 
 }
 
 .topic-list__item {
