--- a/frontend/src/styles/TopNavigationBar.scss
+++ b/frontend/src/styles/TopNavigationBar.scss
@@ -17,3 +17,15 @@
   color: #111;
   margin-left: 24px;
 }
+.top-nav-bar__notification {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: #ffcc00; /* Yellow for notification */
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-weight: bold;
+  display: inline-block;
+  z-index: 10;
+}
