--- a/frontend/src/styles/PhotoDetailsModal.scss
+++ b/frontend/src/styles/PhotoDetailsModal.scss
@@ -174,3 +174,10 @@
   justify-content: center;
   z-index: 1000;
 }
+
+@media (max-width: 768px) {
+  .photo-details-modal {
+    width: 90%;
+    height: 85%;
+  }
+}
