--- a/frontend/src/styles/PhotoListItem.scss
+++ b/frontend/src/styles/PhotoListItem.scss
@@ -43,20 +43,9 @@ div.photo-list__item {
 
 @media (max-width: 768px) {
   div.photo-list__item {
-    margin: 8px auto;
-    width: calc(50% - 20px);
-
-    img.photo-list__image {
-      width: 100%;
-      height: 150px;
-    }
-  }
-}
-
-@media (max-width: 768px) {
-  div.photo-list__item {
-    margin: 4px;
-    width: calc(50% - 12px);
+    margin: 0;
+    width: 100%;
+    max-width: none;
     padding: 4px;
 
     img.photo-list__image {
